--- a/public/global.css
+++ b/public/global.css
@@ -5,7 +5,8 @@ html, body {
 }
 
 body {
-	color: #333;
+	color: #ddd;
+    background-color: #111;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
@@ -13,7 +14,7 @@ body {
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0, 128, 255);
 	text-decoration: none;
 }
 
@@ -22,7 +23,7 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0, 162, 255);
 }
 
 label {
