--- a/public/global.css
+++ b/public/global.css
@@ -8,6 +8,7 @@ body {
 	color: #ddd;
     background-color: #111;
 	margin: 0;
+	overflow-y: scroll;
 	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
