--- a/global.css
+++ b/global.css
@@ -5,16 +5,17 @@ html, body {
 }
 
 body {
-	color: #333;
+	color: #ddd;
+    background-color: #111;
 	margin: 0;
+	overflow-y: scroll;
 	padding: 8px;
-	/* overflow: hidden; */
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0, 128, 255);
 	text-decoration: none;
 }
 
@@ -23,7 +24,7 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0, 162, 255);
 }
 
 label {
@@ -35,7 +36,6 @@ input, button, select, textarea {
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
 	padding: 0.5em;
-	/* margin: 0 0 0.25em 0; */
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 2px;
